Add scrollbar-gutter: stable and overflow-x: clip

--- a/modules/Theme/assets/styles/css/globals.css
+++ b/modules/Theme/assets/styles/css/globals.css
@@ -5,6 +5,14 @@ body {
     flex-direction: column;
 }
 
+html {
+    scrollbar-gutter: stable;
+}
+
+body {
+    overflow-x: clip;
+}
+
 .wrap {
     flex: 1;
 }
