--- a/modules/KadenceBlocks/assets/styles/admin-editor.css
+++ b/modules/KadenceBlocks/assets/styles/admin-editor.css
@@ -15,3 +15,4 @@
 @import 'admin-editor/row-layout.css';
 @import 'admin-editor/column.css';
 @import 'admin-editor/row-subgrid.css';
+@import 'admin-editor/tab.css';
